moved files to directories and changed the README

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -1,4 +1,4 @@
-.f16 .flag{background:url(../images/icons/flags16.png) no-repeat}
+.f16 .flag{background:url(../images/flags16.png) no-repeat;}
 .f16 ._African_Union(OAS){background-position:left -0px;}
 .f16 ._Arab_League{background-position:left -16px;}
 .f16 ._ASEAN{background-position:left -32px;}
