Add flags of Sint Maarten, Curacao and South Sudan
png-crush (without opts) was used to keep a small size

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -242,4 +242,7 @@
 .f16 .ye{background-position:0 -3840px;}
 .f16 .za{background-position:0 -3856px;}
 .f16 .zm{background-position:0 -3872px;}
-.f16 .zw{background-position:0 -3872px;}
+.f16 .zw{background-position:0 -3888px;}
+.f16 .sx{background-position:0 -3904px;}
+.f16 .cw{background-position:0 -3920px;}
+.f16 .ss{background-position:0 -3936px;}
