--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -247,5 +247,8 @@
     .za{background-position:0 -3856px;}
     .zm{background-position:0 -3872px;}
     .zw{background-position:0 -3888px;}
+    .sx{background-position:0 -3904px;}
+    .cw{background-position:0 -3920px;}
+    .ss{background-position:0 -3936px;}
 
 } // .f16
