--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -242,4 +242,7 @@
 .f32 .ye{background-position:0 -7680px;}
 .f32 .za{background-position:0 -7712px;}
 .f32 .zm{background-position:0 -7744px;}
-.f32 .zw{background-position:0 -7744px;}
+.f32 .zw{background-position:0 -7776px;}
+.f32 .sx{background-position:0 -7808px;}
+.f32 .cw{background-position:0 -7840px;}
+.f32 .ss{background-position:0 -7872px;}
