--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -247,5 +247,8 @@
     .za{background-position:0 -7712px;}
     .zm{background-position:0 -7744px;}
     .zw{background-position:0 -7776px;}
+    .sx{background-position:0 -7808px;}
+    .cw{background-position:0 -7840px;}
+    .ss{background-position:0 -7872px;}
 
 } // .f32
