css: add .eu class alias

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -6,7 +6,7 @@
 .f16 ._CIS{background-position:0 -80px;}
 .f16 ._Commonwealth{background-position:0 -96px;}
 .f16 ._England{background-position:0 -112px;}
-.f16 ._European_Union{background-position:0 -128px;}
+.f16 ._European_Union, .f16 .eu{background-position:0 -128px;}
 .f16 ._Islamic_Conference{background-position:0 -144px;}
 .f16 ._Kosovo{background-position:0 -160px;}
 .f16 ._NATO{background-position:0 -176px;}
