--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -24,6 +24,8 @@
     ._United_Nations{background-position:0 -320px;}
     ._Wales{background-position:0 -336px;}
 
+    .eu{background-position:0 -128px;}
+
     .ad{background-position:0 -352px;}
     .ae{background-position:0 -368px;}
     .af{background-position:0 -384px;}
