--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -6,7 +6,7 @@
 .f32 ._CIS{background-position:0 -160px;}
 .f32 ._Commonwealth{background-position:0 -192px;}
 .f32 ._England{background-position:0 -224px;}
-.f32 ._European_Union{background-position:0 -256px;}
+.f32 ._European_Union, .f32 .eu{background-position:0 -256px;}
 .f32 ._Islamic_Conference{background-position:0 -288px;}
 .f32 ._Kosovo{background-position:0 -320px;}
 .f32 ._NATO{background-position:0 -352px;}
