--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -24,6 +24,8 @@
     ._United_Nations{background-position:0 -640px;}
     ._Wales{background-position:0 -672px;}
 
+    .eu{background-position:0 -256px;}
+
     .ad{background-position:0 -704px;}
     .ae{background-position:0 -736px;}
     .af{background-position:0 -768px;}
