--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -93,9 +93,9 @@
     .fj{background-position:0 -1376px;}
     .fm{background-position:0 -1392px;}
     .fo{background-position:0 -1408px;}
-    .fr{background-position:0 -1424px;}
+    .fr{background-position:0 -1424px;}  .bl{background-position:0 -1424px;}  .cp{background-position:0 -1424px;}  .mf{background-position:0 -1424px;}  .yt{background-position:0 -1424px;}
     .ga{background-position:0 -1440px;}
-    .gb{background-position:0 -1456px;}
+    .gb{background-position:0 -1456px;}  .sh{background-position:0 -1456px;}
     .gd{background-position:0 -1472px;}
     .ge{background-position:0 -1488px;}
     .gg{background-position:0 -1504px;}
@@ -177,8 +177,8 @@
     .ne{background-position:0 -2704px;}
     .ng{background-position:0 -2720px;}
     .ni{background-position:0 -2736px;}
-    .nl{background-position:0 -2752px;}
-    .no{background-position:0 -2768px;}
+    .nl{background-position:0 -2752px;}  .bq{background-position:0 -2752px;} 
+    .no{background-position:0 -2768px;}  .bv{background-position:0 -2768px;}  .nq{background-position:0 -2768px;}  .sj{background-position:0 -2768px;}
     .np{background-position:0 -2784px;}
     .nr{background-position:0 -2800px;}
     .nz{background-position:0 -2816px;}
