--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -93,9 +93,9 @@
     .fj{background-position:0 -2752px;}
     .fm{background-position:0 -2784px;}
     .fo{background-position:0 -2816px;}
-    .fr{background-position:0 -2848px;}
+    .fr{background-position:0 -2848px;}  .bl{background-position:0 -2848px;}  .cp{background-position:0 -2848px;}  .mf{background-position:0 -2848px;}  .yt{background-position:0 -2848px;}
     .ga{background-position:0 -2880px;}
-    .gb{background-position:0 -2912px;}
+    .gb{background-position:0 -2912px;}  .sh{background-position:0 -2912px;}
     .gd{background-position:0 -2944px;}
     .ge{background-position:0 -2976px;}
     .gg{background-position:0 -3008px;}
@@ -177,8 +177,8 @@
     .ne{background-position:0 -5408px;}
     .ng{background-position:0 -5440px;}
     .ni{background-position:0 -5472px;}
-    .nl{background-position:0 -5504px;}
-    .no{background-position:0 -5536px;}
+    .nl{background-position:0 -5504px;}  .bq{background-position:0 -5504px;}
+    .no{background-position:0 -5536px;}  .bv{background-position:0 -5536px;}  .nq{background-position:0 -5536px;}  .sj{background-position:0 -5536px;}
     .np{background-position:0 -5568px;}
     .nr{background-position:0 -5600px;}
     .nz{background-position:0 -5632px;}
