css: add aland islands, remove nl antilles

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -27,14 +27,14 @@
 .f16 .ai{background-position:0 -416px;}
 .f16 .al{background-position:0 -432px;}
 .f16 .am{background-position:0 -448px;}
-.f16 .an{background-position:0 -464px;}
-.f16 .ao{background-position:0 -480px;}
-.f16 .aq{background-position:0 -496px;}
-.f16 .ar{background-position:0 -512px;}
-.f16 .as{background-position:0 -528px;}
-.f16 .at{background-position:0 -544px;}
-.f16 .au{background-position:0 -560px;}
-.f16 .aw{background-position:0 -576px;}
+.f16 .ao{background-position:0 -464px;}
+.f16 .aq{background-position:0 -480px;}
+.f16 .ar{background-position:0 -496px;}
+.f16 .as{background-position:0 -512px;}
+.f16 .at{background-position:0 -528px;}
+.f16 .au{background-position:0 -544px;}
+.f16 .aw{background-position:0 -560px;}
+.f16 .ax{background-position:0 -576px;}
 .f16 .az{background-position:0 -592px;}
 .f16 .ba{background-position:0 -608px;}
 .f16 .bb{background-position:0 -624px;}
