--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -33,14 +33,14 @@
     .ai{background-position:0 -416px;}
     .al{background-position:0 -432px;}
     .am{background-position:0 -448px;}
-    .an{background-position:0 -464px;}
-    .ao{background-position:0 -480px;}
-    .aq{background-position:0 -496px;}
-    .ar{background-position:0 -512px;}
-    .as{background-position:0 -528px;}
-    .at{background-position:0 -544px;}
-    .au{background-position:0 -560px;}
-    .aw{background-position:0 -576px;}
+    .ao{background-position:0 -464px;}
+    .aq{background-position:0 -480px;}
+    .ar{background-position:0 -496px;}
+    .as{background-position:0 -512px;}
+    .at{background-position:0 -528px;}
+    .au{background-position:0 -544px;}
+    .aw{background-position:0 -560px;}
+    .ax{background-position:0 -576px;}
     .az{background-position:0 -592px;}
     .ba{background-position:0 -608px;}
     .bb{background-position:0 -624px;}
