--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -33,14 +33,14 @@
     .ai{background-position:0 -832px;}
     .al{background-position:0 -864px;}
     .am{background-position:0 -896px;}
-    .an{background-position:0 -928px;}
-    .ao{background-position:0 -960px;}
-    .aq{background-position:0 -992px;}
-    .ar{background-position:0 -1024px;}
-    .as{background-position:0 -1056px;}
-    .at{background-position:0 -1088px;}
-    .au{background-position:0 -1120px;}
-    .aw{background-position:0 -1152px;}
+    .ao{background-position:0 -928px;}
+    .aq{background-position:0 -960px;}
+    .ar{background-position:0 -992px;}
+    .as{background-position:0 -1024px;}
+    .at{background-position:0 -1056px;}
+    .au{background-position:0 -1088px;}
+    .aw{background-position:0 -1120px;}
+    .ax{background-position:0 -1152px;}
     .az{background-position:0 -1184px;}
     .ba{background-position:0 -1216px;}
     .bb{background-position:0 -1248px;}
