--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -27,14 +27,14 @@
 .f32 .ai{background-position:0 -832px;}
 .f32 .al{background-position:0 -864px;}
 .f32 .am{background-position:0 -896px;}
-.f32 .an{background-position:0 -928px;}
-.f32 .ao{background-position:0 -960px;}
-.f32 .aq{background-position:0 -992px;}
-.f32 .ar{background-position:0 -1024px;}
-.f32 .as{background-position:0 -1056px;}
-.f32 .at{background-position:0 -1088px;}
-.f32 .au{background-position:0 -1120px;}
-.f32 .aw{background-position:0 -1152px;}
+.f32 .ao{background-position:0 -928px;}
+.f32 .aq{background-position:0 -960px;}
+.f32 .ar{background-position:0 -992px;}
+.f32 .as{background-position:0 -1024px;}
+.f32 .at{background-position:0 -1056px;}
+.f32 .au{background-position:0 -1088px;}
+.f32 .aw{background-position:0 -1120px;}
+.f32 .ax{background-position:0 -1152px;}
 .f32 .az{background-position:0 -1184px;}
 .f32 .ba{background-position:0 -1216px;}
 .f32 .bb{background-position:0 -1248px;}
