index: add supported special flags in the list
also enhance css of unofficial or deprecated iso codes

--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -2,7 +2,7 @@
 
     .flag{background:url(../images/flags32.png) no-repeat;}
 
-    ._African_Union(OAS){background-position:0 -32px;}
+    ._African_Union{background-position:0 -32px;}
     ._Arab_League{background-position:0 -64px;}
     ._ASEAN{background-position:0 -96px;}
     ._CARICOM{background-position:0 -128px;}
