--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -1,5 +1,5 @@
 .f16 .flag{display:inline-block;height:16px;width:16px;vertical-align:text-top;line-height:16px;background:url(../images/flags16.png) no-repeat;}
-.f16 ._African_Union(OAS){background-position:0 -16px;}
+.f16 ._African_Union{background-position:0 -16px;}
 .f16 ._Arab_League{background-position:0 -32px;}
 .f16 ._ASEAN{background-position:0 -48px;}
 .f16 ._CARICOM{background-position:0 -64px;}
