--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -1,5 +1,5 @@
 .f32 .flag{display:inline-block;height:32px;width:32px;vertical-align:text-top;line-height:32px;background:url(../images/flags32.png) no-repeat;}
-.f32 ._African_Union(OAS){background-position:0 -32px;}
+.f32 ._African_Union{background-position:0 -32px;}
 .f32 ._Arab_League{background-position:0 -64px;}
 .f32 ._ASEAN{background-position:0 -96px;}
 .f32 ._CARICOM{background-position:0 -128px;}
