Pirate, Klingon, UFP

--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -252,5 +252,8 @@
     .sx{background-position:0 -3904px;}
     .cw{background-position:0 -3920px;}
     .ss{background-position:0 -3936px;}
+    ._Klingon{background-position:0 -3952px;}
+    ._United_Federation_of_Planets{background-position:0 -3968px;}
+    ._Pirate{background-position:0 -3984px;}
 
 } // .f16
