--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -246,3 +246,6 @@
 .f32 .sx{background-position:0 -7808px;}
 .f32 .cw{background-position:0 -7840px;}
 .f32 .ss{background-position:0 -7872px;}
+.f32 ._Klingon{background-position:0 -7904px;}
+.f32 ._United_Federation_of_Planets{background-position:0 -7936px;}
+.f32 ._Pirate{background-position:0 -7966px;}
