--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -252,5 +252,8 @@
     .sx{background-position:0 -7808px;}
     .cw{background-position:0 -7840px;}
     .ss{background-position:0 -7872px;}
+    ._Klingon{background-position:0 -7904px;}
+    ._United_Federation_of_Planets{background-position:0 -7936px;}
+    ._Pirate{background-position:0 -7966px;}
 
 } // .f32
