--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -246,3 +246,6 @@
 .f16 .sx{background-position:0 -3904px;}
 .f16 .cw{background-position:0 -3920px;}
 .f16 .ss{background-position:0 -3936px;}
+.f16 ._Klingon{background-position:0 -3952px;}
+.f16 ._United_Federation_of_Planets{background-position:0 -3968px;}
+.f16 ._Pirate{background-position:0 -3984px;}
