offset fixed for pirate, +DOOP, +Starfleet

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -249,3 +249,5 @@
 .f16 ._Klingon{background-position:0 -3952px;}
 .f16 ._United_Federation_of_Planets{background-position:0 -3968px;}
 .f16 ._Pirate{background-position:0 -3984px;}
+.f16 ._Starfleet{background-position:0 -4000px;}
+.f16 ._DOOP{background-position:0 -4016px;}
