--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -255,5 +255,6 @@
     ._Klingon{background-position:0 -3952px;}
     ._United_Federation_of_Planets{background-position:0 -3968px;}
     ._Pirate{background-position:0 -3984px;}
-
+    ._Starfleet{background-position:0 -4000px;}
+    ._DOOP{background-position:0 -4016px;}
 } // .f16
