--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -248,4 +248,6 @@
 .f32 .ss{background-position:0 -7872px;}
 .f32 ._Klingon{background-position:0 -7904px;}
 .f32 ._United_Federation_of_Planets{background-position:0 -7936px;}
-.f32 ._Pirate{background-position:0 -7966px;}
+.f32 ._Pirate{background-position:0 -7968px;}
+.f32 ._Starfleet{background-position:0 -8000px;}
+.f32 ._DOOP{background-position:0 -8032px;}
