--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -254,6 +254,8 @@
     .ss{background-position:0 -7872px;}
     ._Klingon{background-position:0 -7904px;}
     ._United_Federation_of_Planets{background-position:0 -7936px;}
-    ._Pirate{background-position:0 -7966px;}
+    ._Pirate{background-position:0 -7968px;}
+    ._Starfleet{background-position:0 -8000px;}
+    ._DOOP{background-position:0 -8032px;}
 
 } // .f32
