--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -257,4 +257,13 @@
     ._Pirate{background-position:0 -3984px;}
     ._Starfleet{background-position:0 -4000px;}
     ._DOOP{background-position:0 -4016px;}
+    ._GoT_Arryn{background-position:0 -4032px;}
+    ._GoT_Baratheon{background-position:0 -4048px;}
+    ._GoT_Greyjoy{background-position:0 -4064px;}
+    ._GoT_Lannister{background-position:0 -4080px;}
+    ._GoT_Martell{background-position:0 -4096px;}
+    ._GoT_Stark{background-position:0 -4112px;}
+    ._GoT_Targaryen{background-position:0 -4128px;}
+    ._GoT_Tully{background-position:0 -4144px;}
+    ._GoT_Tyrell{background-position:0 -4160px;}
 } // .f16
