--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -251,3 +251,12 @@
 .f32 ._Pirate{background-position:0 -7968px;}
 .f32 ._Starfleet{background-position:0 -8000px;}
 .f32 ._DOOP{background-position:0 -8032px;}
+.f32 ._GoT_Arryn{background-position:0     -8064px;}
+.f32 ._GoT_Baratheon{background-position:0 -8096px;}
+.f32 ._GoT_Greyjoy{background-position:0   -8128px;}
+.f32 ._GoT_Lannister{background-position:0 -8160px;}
+.f32 ._GoT_Martell{background-position:0   -8192px;}
+.f32 ._GoT_Stark{background-position:0     -8224px;}
+.f32 ._GoT_Targaryen{background-position:0 -8256px;}
+.f32 ._GoT_Tully{background-position:0     -8288px;}
+.f32 ._GoT_Tyrell{background-position:0    -8320px;}
