--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -258,4 +258,14 @@
     ._Starfleet{background-position:0 -8000px;}
     ._DOOP{background-position:0 -8032px;}
 
+    ._GoT_Arryn{background-position:0     -8064px;}
+    ._GoT_Baratheon{background-position:0 -8096px;}
+    ._GoT_Greyjoy{background-position:0   -8128px;}
+    ._GoT_Lannister{background-position:0 -8160px;}
+    ._GoT_Martell{background-position:0   -8192px;}
+    ._GoT_Stark{background-position:0     -8224px;}
+    ._GoT_Targaryen{background-position:0 -8256px;}
+    ._GoT_Tully{background-position:0     -8288px;}
+    ._GoT_Tyrell{background-position:0    -8320px;}
+
 } // .f32
