--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -266,4 +266,5 @@
     ._GoT_Targaryen{background-position:0 -4128px;}
     ._GoT_Tully{background-position:0 -4144px;}
     ._GoT_Tyrell{background-position:0 -4160px;}
+    ._Esperanto{background-position:0 -4176px;}
 } // .f16
