--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -260,3 +260,4 @@
 .f32 ._GoT_Targaryen{background-position:0 -8256px;}
 .f32 ._GoT_Tully{background-position:0     -8288px;}
 .f32 ._GoT_Tyrell{background-position:0    -8320px;}
+.f32 ._Esperanto{background-position:0    -8352px;}
