--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -267,5 +267,6 @@
     ._GoT_Targaryen{background-position:0 -8256px;}
     ._GoT_Tully{background-position:0     -8288px;}
     ._GoT_Tyrell{background-position:0    -8320px;}
+    ._Esperanto{background-position:0     -8352px;}
 
 } // .f32
