some missing flags

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -261,3 +261,10 @@
 .f16 ._GoT_Tully{background-position:0 -4144px;}
 .f16 ._GoT_Tyrell{background-position:0 -4160px;}
 .f16 ._Esperanto{background-position:0 -4176px;}
+.f16 .ct{background-position:0 -2048px;} /* same as .ki */
+.f16    .ac{background-position:0 -4192px;}
+.f16    .ic{background-position:0 -4208px;}
+.f16    .cx{background-position:0 -4224px;}
+.f16    .cc{background-position:0 -4240px;}
+.f16    .an{background-position:0 -4256px;}
+.f16    .cs{background-position:0 -4272px;}
