--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -267,4 +267,11 @@
     ._GoT_Tully{background-position:0 -4144px;}
     ._GoT_Tyrell{background-position:0 -4160px;}
     ._Esperanto{background-position:0 -4176px;}
+    .ct{background-position:0 -2048px;} // same as .kiy
+    .ac{background-position:0 -4192px;}
+    .ic{background-position:0 -4208px;}
+    .cx{background-position:0 -4224px;}
+    .cc{background-position:0 -4240px;}
+    .an{background-position:0 -4256px;}
+    .cs{background-position:0 -4272px;}
 } // .f16
