--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -261,3 +261,12 @@
 .f32 ._GoT_Tully{background-position:0     -8288px;}
 .f32 ._GoT_Tyrell{background-position:0    -8320px;}
 .f32 ._Esperanto{background-position:0    -8352px;}
+
+.f32 .ct{background-position:0 -4096px;} /* same as .ki */
+
+.f32    .ac{background-position:0 -8384px;}
+.f32    .ic{background-position:0 -8416px;}
+.f32    .cx{background-position:0 -8448px;}
+.f32    .cc{background-position:0 -8480px;}
+.f32    .an{background-position:0 -8512px;}
+.f32    .cs{background-position:0 -8544px;}
