--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -269,4 +269,13 @@
     ._GoT_Tyrell{background-position:0    -8320px;}
     ._Esperanto{background-position:0     -8352px;}
 
+    .ct{background-position:0 -4096px;} // same as .ki
+
+    .ac{background-position:0 -8384px;}
+    .ic{background-position:0 -8416px;}
+    .cx{background-position:0 -8448px;}
+    .cc{background-position:0 -8480px;}
+    .an{background-position:0 -8512px;}
+    .cs{background-position:0 -8544px;}
+
 } // .f32
