add diego garcia, remove Ceuta and Melilla (they use different flags)

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -268,3 +268,4 @@
 .f16    .cc{background-position:0 -4240px;}
 .f16    .an{background-position:0 -4256px;}
 .f16    .cs{background-position:0 -4272px;}
+.f16 .dg{background-position:0 -4304px;}
