--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -270,3 +270,4 @@
 .f32    .cc{background-position:0 -8480px;}
 .f32    .an{background-position:0 -8512px;}
 .f32    .cs{background-position:0 -8544px;}
+.f32 .dg{background-position:0 -8608px;}
