--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -278,4 +278,5 @@
     .an{background-position:0 -8512px;}
     .cs{background-position:0 -8544px;}
 
+    .dg{background-position:0 -8608px;}
 } // .f32 - DO NOT REMOVE THIS LINE
