--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -274,4 +274,5 @@
     .cc{background-position:0 -4240px;}
     .an{background-position:0 -4256px;}
     .cs{background-position:0 -4272px;}
+    .dg{background-position:0 -4304px;}
 } // .f16 - DO NOT REMOVE THIS LINE
