more missing flags, removed some deprecated codes

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -269,3 +269,7 @@
 .f16    .an{background-position:0 -4256px;}
 .f16    .cs{background-position:0 -4272px;}
 .f16 .dg{background-position:0 -4304px;}
+.f16 .gf{background-position:0 -4320px;}
+.f16 .gs{background-position:0 -4336px;}
+.f16 .hm{background-position:0 -544px;} /* same as .au */
+.f16 .io{background-position:0 -4352px;}
