--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -271,3 +271,7 @@
 .f32    .an{background-position:0 -8512px;}
 .f32    .cs{background-position:0 -8544px;}
 .f32 .dg{background-position:0 -8608px;}
+.f32 .gf{background-position:0 -8640px;}
+.f32 .gs{background-position:0 -8672px;}
+.f32 .hm{background-position:0 -1088px;} /* same as .au */
+.f32 .io{background-position:0 -8704px;}
