--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -279,4 +279,8 @@
     .cs{background-position:0 -8544px;}
 
     .dg{background-position:0 -8608px;}
+    .gf{background-position:0 -8640px;}
+    .gs{background-position:0 -8672px;}
+    .hm{background-position:0 -1088px;} // same as .au
+    .io{background-position:0 -8704px;}
 } // .f32 - DO NOT REMOVE THIS LINE
