--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -275,4 +275,8 @@
     .an{background-position:0 -4256px;}
     .cs{background-position:0 -4272px;}
     .dg{background-position:0 -4304px;}
+    .gf{background-position:0 -4320px;}
+    .gs{background-position:0 -4336px;}
+    .hm{background-position:0 -544px;} // same as .au
+    .io{background-position:0 -4352px;}
 } // .f16 - DO NOT REMOVE THIS LINE
