more missing flags

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -273,3 +273,8 @@
 .f16 .gs{background-position:0 -4336px;}
 .f16 .hm{background-position:0 -544px;} /* same as .au */
 .f16 .io{background-position:0 -4352px;}
+.f16 .jt{background-position:0 -3664px;} /* same as .us */
+.f16 .mi{background-position:0 -3664px;} /* same as .us */
+.f16 .mp{background-position:0 -4368px;}
+.f16 .nf{background-position:0 -4384px;}
+.f16 .nu{background-position:0 -4400px;}
