--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -275,3 +275,7 @@
 .f32 .gs{background-position:0 -8672px;}
 .f32 .hm{background-position:0 -1088px;} /* same as .au */
 .f32 .io{background-position:0 -8704px;}
+.f32 .jt{background-position:0 -7328px;} /* same as .us */
+.f32 .mi{background-position:0 -7328px;} /* same as .us */.f32 .mp{background-position:0 -8736px;}
+.f32 .nf{background-position:0 -8768px;}
+.f32 .nu{background-position:0 -8800px;}
