--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -283,4 +283,9 @@
     .gs{background-position:0 -8672px;}
     .hm{background-position:0 -1088px;} // same as .au
     .io{background-position:0 -8704px;}
+    .jt{background-position:0 -7328px;} // same as .us
+    .mi{background-position:0 -7328px;} // same as .us
+    .mp{background-position:0 -8736px;}
+    .nf{background-position:0 -8768px;}
+    .nu{background-position:0 -8800px;}
 } // .f32 - DO NOT REMOVE THIS LINE
