--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -279,4 +279,9 @@
     .gs{background-position:0 -4336px;}
     .hm{background-position:0 -544px;} // same as .au
     .io{background-position:0 -4352px;}
+    .jt{background-position:0 -3664px;} /* same as .us */
+    .mi{background-position:0 -3664px;} /* same as .us */
+    .mp{background-position:0 -4368px;}
+    .nf{background-position:0 -4384px;}
+    .nu{background-position:0 -4400px;}
 } // .f16 - DO NOT REMOVE THIS LINE
