--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -278,3 +278,4 @@
 .f16 .mp{background-position:0 -4368px;}
 .f16 .nf{background-position:0 -4384px;}
 .f16 .nu{background-position:0 -4400px;}
+.f16 ._OGS{background-position:0 -4416px;}
