--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -279,3 +279,4 @@
 .f32 .mi{background-position:0 -7328px;} /* same as .us */.f32 .mp{background-position:0 -8736px;}
 .f32 .nf{background-position:0 -8768px;}
 .f32 .nu{background-position:0 -8800px;}
+.f32 ._OGS{background-position:0 -8832px;}
