--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -288,4 +288,5 @@
     .mp{background-position:0 -8736px;}
     .nf{background-position:0 -8768px;}
     .nu{background-position:0 -8800px;}
+    ._OGS{background-position:0 -8832px;}
 } // .f32 - DO NOT REMOVE THIS LINE
