--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -284,4 +284,5 @@
     .mp{background-position:0 -4368px;}
     .nf{background-position:0 -4384px;}
     .nu{background-position:0 -4400px;}
+    ._OGS{background-position:0 -4416px;}
 } // .f16 - DO NOT REMOVE THIS LINE
