more missing flags, made GoT flags more flag-like

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -279,3 +279,26 @@
 .f16 .nf{background-position:0 -4384px;}
 .f16 .nu{background-position:0 -4400px;}
 .f16 ._OGS{background-position:0 -4416px;}
+.f16 .nu{background-position:0 -4432px;}
+.f16 .cc{background-position:0 -4448px;}
+.f16 .cx{background-position:0 -4464px;}
+.f16 .gf{background-position:0 -4480px;}
+.f16 .gs{background-position:0 -4496px;}
+.f16 .io{background-position:0 -4512px;}
+.f16 .mp{background-position:0 -4528px;}
+.f16 .nf{background-position:0 -4544px;}
+.f16 .pm{background-position:0 -4560px;}
+.f16 .pn{background-position:0 -4576px;}
+.f16 .tf{background-position:0 -4592px;}
+.f16 .tk{background-position:0 -4608px;}
+.f16 .wf{background-position:0 -4624px;}
+.f16 ._GoT_Arryn{background-position:0 -4640px;}
+.f16 ._GoT_Baratheon{background-position:0 -4656px;}
+.f16 ._GoT_Greyjoy{background-position:0 -4672px;}
+.f16 ._GoT_Lannister{background-position:0 -4688px;}
+.f16 ._GoT_Martell{background-position:0 -4704px;}
+.f16 ._GoT_Stark{background-position:0 -4720px;}
+.f16 ._GoT_Targaryen{background-position:0 -4736px;}
+.f16 ._GoT_Tully{background-position:0 -4752px;}
+.f16 ._GoT_Tyrell{background-position:0 -4768px;}
+.f16 ._Pirate{background-position:0 -4784px;}
