--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -285,4 +285,27 @@
     .nf{background-position:0 -4384px;}
     .nu{background-position:0 -4400px;}
     ._OGS{background-position:0 -4416px;}
+    .nu{background-position:0 -4432px;}
+    .cc{background-position:0 -4448px;}
+    .cx{background-position:0 -4464px;}
+    .gf{background-position:0 -4480px;}
+    .gs{background-position:0 -4496px;}
+    .io{background-position:0 -4512px;}
+    .mp{background-position:0 -4528px;}
+    .nf{background-position:0 -4544px;}
+    .pm{background-position:0 -4560px;}
+    .pn{background-position:0 -4576px;}
+    .tf{background-position:0 -4592px;}
+    .tk{background-position:0 -4608px;}
+    .wf{background-position:0 -4624px;}
+    ._GoT_Arryn{background-position:0 -4640px;}
+    ._GoT_Baratheon{background-position:0 -4656px;}
+    ._GoT_Greyjoy{background-position:0 -4672px;}
+    ._GoT_Lannister{background-position:0 -4688px;}
+    ._GoT_Martell{background-position:0 -4704px;}
+    ._GoT_Stark{background-position:0 -4720px;}
+    ._GoT_Targaryen{background-position:0 -4736px;}
+    ._GoT_Tully{background-position:0 -4752px;}
+    ._GoT_Tyrell{background-position:0 -4768px;}
+    ._Pirate{background-position:0 -4784px;}
 } // .f16 - DO NOT REMOVE THIS LINE
