--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -280,3 +280,26 @@
 .f32 .nf{background-position:0 -8768px;}
 .f32 .nu{background-position:0 -8800px;}
 .f32 ._OGS{background-position:0 -8832px;}
+.f32 .nu{background-position:0 -8864px;}
+.f32 .cc{background-position:0 -8896px;}
+.f32 .cx{background-position:0 -8928px;}
+.f32 .gf{background-position:0 -8960px;}
+.f32 .gs{background-position:0 -8992px;}
+.f32 .io{background-position:0 -9024px;}
+.f32 .mp{background-position:0 -9056px;}
+.f32 .nf{background-position:0 -9088px;}
+.f32 .pm{background-position:0 -9120px;}
+.f32 .pn{background-position:0 -9152px;}
+.f32 .tf{background-position:0 -9184px;}
+.f32 .tk{background-position:0 -9216px;}
+.f32 .wf{background-position:0 -9248px;}
+.f32 ._GoT_Arryn{background-position:0 -9280px;}
+.f32 ._GoT_Baratheon{background-position:0 -9312px;}
+.f32 ._GoT_Greyjoy{background-position:0 -9344px;}
+.f32 ._GoT_Lannister{background-position:0 -9376px;}
+.f32 ._GoT_Martell{background-position:0 -9408px;}
+.f32 ._GoT_Stark{background-position:0 -9440px;}
+.f32 ._GoT_Targaryen{background-position:0 -9472px;}
+.f32 ._GoT_Tully{background-position:0 -9504px;}
+.f32 ._GoT_Tyrell{background-position:0 -9536px;}
+.f32 ._Pirate{background-position:0 -9568px;}
