--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -289,4 +289,27 @@
     .nf{background-position:0 -8768px;}
     .nu{background-position:0 -8800px;}
     ._OGS{background-position:0 -8832px;}
+    .nu{background-position:0 -8864px;}
+    .cc{background-position:0 -8896px;}
+    .cx{background-position:0 -8928px;}
+    .gf{background-position:0 -8960px;}
+    .gs{background-position:0 -8992px;}
+    .io{background-position:0 -9024px;}
+    .mp{background-position:0 -9056px;}
+    .nf{background-position:0 -9088px;}
+    .pm{background-position:0 -9120px;}
+    .pn{background-position:0 -9152px;}
+    .tf{background-position:0 -9184px;}
+    .tk{background-position:0 -9216px;}
+    .wf{background-position:0 -9248px;}
+    ._GoT_Arryn{background-position:0 -9280px;}
+    ._GoT_Baratheon{background-position:0 -9312px;}
+    ._GoT_Greyjoy{background-position:0 -9344px;}
+    ._GoT_Lannister{background-position:0 -9376px;}
+    ._GoT_Martell{background-position:0 -9408px;}
+    ._GoT_Stark{background-position:0 -9440px;}
+    ._GoT_Targaryen{background-position:0 -9472px;}
+    ._GoT_Tully{background-position:0 -9504px;}
+    ._GoT_Tyrell{background-position:0 -9536px;}
+    ._Pirate{background-position:0 -9568px;}
 } // .f32 - DO NOT REMOVE THIS LINE
