--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -1,6 +1,7 @@
+$flags-images-path: "../images" !default; //Override this variable in your .scss to use bower.
 .f32 {
 
-    .flag{background:url(../images/flags32.png) no-repeat;}
+    .flag{background:url(#{$flags-images-path}/flags32.png) no-repeat;}
 
     ._African_Union{background-position:0 -32px;}
     ._Arab_League{background-position:0 -64px;}
