Added a Niue flag to the end of each file.

--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -253,5 +253,6 @@ $flags-images-path: "../images" !default; //Override this variable in your .scss
     .sx{background-position:0 -3904px;}
     .cw{background-position:0 -3920px;}
     .ss{background-position:0 -3936px;}
+    .nu{background-position:0 -3952px;}
 
 } // .f16
