--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -246,3 +246,4 @@
 .f32 .sx{background-position:0 -7808px;}
 .f32 .cw{background-position:0 -7840px;}
 .f32 .ss{background-position:0 -7872px;}
+.f32 .nu{background-position:0 -7904px;}
