--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -253,5 +253,6 @@ $flags-images-path: "../images" !default; //Override this variable in your .scss
     .sx{background-position:0 -7808px;}
     .cw{background-position:0 -7840px;}
     .ss{background-position:0 -7872px;}
+    .nu{background-position:0 -7904px;}
 
 } // .f32
