--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -246,3 +246,4 @@
 .f16 .sx{background-position:0 -3904px;}
 .f16 .cw{background-position:0 -3920px;}
 .f16 .ss{background-position:0 -3936px;}
+.f16 .nu{background-position:0 -3952px;}
