Issue #743: add Lord Howe Island

--- a/stylesheets/flags16.css
+++ b/stylesheets/flags16.css
@@ -302,3 +302,4 @@
 .f16 ._GoT_Tully{background-position:0 -4752px;}
 .f16 ._GoT_Tyrell{background-position:0 -4768px;}
 .f16 ._Pirate{background-position:0 -4784px;}
+.f16 .lh{background-position:0 -4800px;}
