--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -308,4 +308,5 @@
     ._GoT_Tully{background-position:0 -4752px;}
     ._GoT_Tyrell{background-position:0 -4768px;}
     ._Pirate{background-position:0 -4784px;}
+    .lh{background-position:0 -4800px;}
 } // .f16 - DO NOT REMOVE THIS LINE
