--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -312,4 +312,5 @@
     ._GoT_Tully{background-position:0 -9504px;}
     ._GoT_Tyrell{background-position:0 -9536px;}
     ._Pirate{background-position:0 -9568px;}
+    .lh{background-position:0 -9600px;}
 } // .f32 - DO NOT REMOVE THIS LINE
