.lh to ._Lord_Howe_Island
.lh is not an official country code for lord howe island, see ISO 3166-1

--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -303,4 +303,4 @@
 .f32 ._GoT_Tully{background-position:0 -9504px;}
 .f32 ._GoT_Tyrell{background-position:0 -9536px;}
 .f32 ._Pirate{background-position:0 -9568px;}
-.f32 .lh{background-position:0 -9600px;}
+.f32 ._Lord_Howe_Island{background-position:0 -9600px;}
