Added catalonia flag

--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -309,4 +309,5 @@
     ._GoT_Tyrell{background-position:0 -4768px;}
     ._Pirate{background-position:0 -4784px;}
     ._Lord_Howe_Island{background-position:0 -4800px;}
+    ._cat{background-position:0 -4816px;}
 } // .f16 - DO NOT REMOVE THIS LINE
