--- a/stylesheets/flags32.css
+++ b/stylesheets/flags32.css
@@ -304,3 +304,4 @@
 .f32 ._GoT_Tyrell{background-position:0 -9536px;}
 .f32 ._Pirate{background-position:0 -9568px;}
 .f32 ._Lord_Howe_Island{background-position:0 -9600px;}
+.f32 ._cat{background-position:0 -9632px;}
