--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -313,4 +313,5 @@
     ._GoT_Tyrell{background-position:0 -9536px;}
     ._Pirate{background-position:0 -9568px;}
     ._Lord_Howe_Island{background-position:0 -9600px;}
+    ._cat{background-position:0 -9632px;}
 } // .f32 - DO NOT REMOVE THIS LINE
