add LGBT+ Pride flag

--- a/stylesheets/flags16.scss
+++ b/stylesheets/flags16.scss
@@ -310,4 +310,5 @@
     ._Pirate{background-position:0 -4784px;}
     ._Lord_Howe_Island{background-position:0 -4800px;}
     ._cat{background-position:0 -4816px;}
+    ._LGBT{background-position:0 -4832px;}
 } // .f16 - DO NOT REMOVE THIS LINE
