--- a/stylesheets/flags32.scss
+++ b/stylesheets/flags32.scss
@@ -314,4 +314,5 @@
     ._Pirate{background-position:0 -9568px;}
     ._Lord_Howe_Island{background-position:0 -9600px;}
     ._cat{background-position:0 -9632px;}
+    ._LGBT{background-position:0 -9664px;}
 } // .f32 - DO NOT REMOVE THIS LINE
